Bug 472063 - mingw build failure: undefined reference to 'WinMain@16' in windbgdlg.cpp, r=neil, sr=bsmedberg